--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,6 +14,19 @@ jobs:
 
     steps:
     
+    # 🎶 orchestrator
+    - uses: actions/checkout@v4
+    - name: '🐋 build Docker image'
+      working-directory: ./src/orchestrator
+      run: docker build -t ${{ vars.DOCKER_HUB_USERNAME }}/emoji-api-orchestrator .
+
+    - name: '🐋 log in to Docker Hub'
+      run: echo ${{ secrets.DOCKER_HUB_TOKEN }} | docker login -u ${{ vars.DOCKER_HUB_USERNAME }} --password-stdin      
+      
+    - name: '🐋 push image to Docker Hub'
+      run: docker push ${{ vars.DOCKER_HUB_USERNAME }}/emoji-api-orchestrator
+
+    # 🐒 animals
     - uses: actions/checkout@v4
     - name: '🐋 build Docker image'
       working-directory: ./src/animals
@@ -26,6 +39,7 @@ jobs:
       run: docker push ${{ vars.DOCKER_HUB_USERNAME }}/emoji-api-animals
 
 
+    # 🍔 foods
     - uses: actions/checkout@v4
     - name: '🐋 build Docker image'
       working-directory: ./src/foods
@@ -38,6 +52,7 @@ jobs:
       run: docker push ${{ vars.DOCKER_HUB_USERNAME }}/emoji-api-foods
 
 
+    # 🏈 sports
     - uses: actions/checkout@v4
     - name: '🐋 build Docker image'
       working-directory: ./src/sports
