--- a/src/compose.yml
+++ b/src/compose.yml
@@ -1,14 +1,25 @@
 services:
+
+    orchestrator:
+        image: orchestrator
+        ports:
+            - "5000:80"
+        environment:
+            - ANIMALS_URL=http://animals:80
+            - FOODS_URL=http://foods:80
+            - SPORTS_URL=http://sports:80
+            - ENVIRONMENT=dev
+
     animals:
         image: sergiobarriel/emoji-api-animals
         ports:
-            - "5000:80"
-    foods:
-        image: sergiobarriel/emoji-api-foods
-        ports:
             - "5001:80"
+    foods:
+        image: sergiobarriel/emoji-api-foods      
+        ports:
+            - "5002:80"
 
     sports:
         image: sergiobarriel/emoji-api-sports
         ports:
-            - "5002:80"            
+            - "5003:80"            
