--- a/src/orchestrator/Dockerfile
+++ b/src/orchestrator/Dockerfile
@@ -1,21 +1,17 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
+EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["orchestrator.csproj", "./"]
 RUN dotnet restore "orchestrator.csproj"
 COPY . .
 WORKDIR "/src/"
-RUN dotnet build "orchestrator.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "orchestrator.csproj" --configuration Release -o /app/build
 
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "orchestrator.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "orchestrator.csproj" --configuration Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
