updated docker compose files with docker hub image

--- a/src/compose.build.yml
+++ b/src/compose.build.yml
@@ -1,7 +1,7 @@
 services:
 
     orchestrator:
-        image: orchestrator
+        image: sergiobarriel/emoji-api-orchestrator
         build: 
             dockerfile: Dockerfile
             context: ./orchestrator
