--- a/src/compose.yml
+++ b/src/compose.yml
@@ -1,7 +1,7 @@
 services:
 
     orchestrator:
-        image: orchestrator
+        image: sergiobarriel/emoji-api-orchestrator
         ports:
             - "5000:80"
         environment:
